test/spec_vectors/return_call_indirect/fail/module_12.wat
(module (type (func)) (func $no-table (return_call_indirect (type 0) (i32.const 0))))